# Cohort-3-Web3

./: .gitignore  .gitmodules
test-ledger/: faucet-keypair.json  genesis.bin.failed  genesis.tar.bz2.failed
week-1/: 2.js  3.js  readme.md
week-10/: 1.sol  readme.md
week-11/: readme.md
week-12-create-token/: README.md
week-13/: readme.md
week-13-lst/: package.json
week-14/: readme.md
week-15/: Vehicle.sol  array1.sol  array2.sol  car.sol  for_loop.sol  if-else.sol  readme.md  struct.sol
week-16/: assing.sol  readme.md
week-17/: allowances.sol  contract.sol  erc20.sol  package-lock.json  package.json  readme.md
week-18-live/: readme.md
week-18-offline/: readme.md
week-19/: readme.md
week-2/: 1.js  2.js  3.js  4.js  5.js  readme.md
week-20/: readme.md
week-21/: README.md
week-22/: readme.md
week-22-offline/: a.sol  b.sol  c.sol  d.sol  e.sol  f.sol  g.sol  readme.md
week-23/: README.md
week-23-staking-contract/: README.md
week-24/: README.md
week-26-rust/: readme.md
week-27-rust/: Cargo.toml  readme.md
week-29/: readme.md
week-3-wallet/: README.md  package-lock.json
week-30/: Cargo.toml  readme.md
week-31/: Cargo.toml  readme.md
week-32-sol-program-client/: main.c  readme.md
week-34/: .env.example  Cargo.toml  README.md
week-37-cpi-on-pda/: readme.md
week-38-Anchor/: readme.md
week-39-cpi-contract-anchor/: Anchor.toml  readme.md
week-39-cpi-contract-anchor/programs/week-39-cpi-contract-anchor/: Cargo.toml
week-39-cpi-contract-anchor/programs/week-39-cpi-contract-anchor/src/: lib.rs  lib2.rs
week-7/: 1.js  (+2 more)
(+156 files in other folders)
